[gd_scene load_steps=6 format=3 uid="uid://c2u13wqc5rivg"]

[ext_resource type="Script" path="res://windows/create-account/create_account.gd" id="1_jbqje"]
[ext_resource type="PackedScene" uid="uid://cvr75iy54tiij" path="res://windows/transition.tscn" id="2_eyuyt"]
[ext_resource type="FontFile" uid="uid://cveouj21bacwl" path="res://assets/fonts/Daniel-Black.otf" id="2_ob8u6"]
[ext_resource type="FontFile" uid="uid://r4sxbgrmy3g1" path="res://assets/fonts/daniel.ttf" id="3_0xtv4"]
[ext_resource type="FontFile" uid="uid://xubed831mtc" path="res://assets/fonts/danielbd.ttf" id="4_81y1i"]

[node name="Create_Account" type="Node2D"]
script = ExtResource("1_jbqje")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -31.0
offset_top = -25.0
offset_right = 1177.0
offset_bottom = 679.0
color = Color(0.27451, 0.403922, 0.27451, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Centre" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title_Label" type="Node2D" parent="CanvasLayer/Centre"]
position = Vector2(0, -300)

[node name="Label" type="Label" parent="CanvasLayer/Centre/Title_Label"]
offset_left = -556.0
offset_right = 597.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_ob8u6")
theme_override_font_sizes/font_size = 70
text = "Create Account"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username_Enter_TextEdit" type="Node2D" parent="CanvasLayer/Centre"]

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/Centre/Username_Enter_TextEdit"]
offset_left = -242.0
offset_top = -39.0
offset_right = 240.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_0xtv4")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Username"

[node name="Enter_Button" type="Node2D" parent="CanvasLayer/Centre"]
position = Vector2(0, 50)

[node name="Button" type="Button" parent="CanvasLayer/Centre/Enter_Button"]
offset_left = -73.0
offset_top = -26.0
offset_right = 70.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_81y1i")
theme_override_font_sizes/font_size = 30
text = "Create"

[node name="Transition" parent="CanvasLayer/Centre" instance=ExtResource("2_eyuyt")]
z_index = 1

[connection signal="pressed" from="CanvasLayer/Centre/Enter_Button/Button" to="." method="_on_button_pressed_ENTER"]
[connection signal="done" from="CanvasLayer/Centre/Transition" to="." method="_on_transition_done"]
